--- a/index.html
+++ b/index.html
@@ -16,6 +16,36 @@
 </head>
 
 <body>
+    <div class="banner">
+        <div class="container">
+            <div class="banner-content">
+                <div class="banner-1">
+                <div class="banner-text">
+                    <h1>WE ARE EXPERTS</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur laborum labore repellat
+                        itaque rerum quia tempora omnis officiis rem obcaecati.</p>
+                    <a href="#">READ MORE</a>
+                </div>
+                </div>
+                <div class="banner-1">
+                    <div class="banner-text">
+                        <h1>WE ARE EXPERTS</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur laborum labore repellat
+                            itaque rerum quia tempora omnis officiis rem obcaecati.</p>
+                        <a href="#">READ MORE</a>
+                    </div>
+                </div>
+                <div class="banner-1">
+                    <div class="banner-text">
+                        <h1>WE ARE EXPERTS</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur laborum labore repellat
+                            itaque rerum quia tempora omnis officiis rem obcaecati.</p>
+                        <a href="#">READ MORE</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
@@ -26,6 +56,17 @@
     <script src="js/jquery-3.6.4.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script>
+        $('.banner-content').slick({
+            dots: true,
+            infinite: true,
+            speed: 300,
+            arrows:false,
+            slidesToShow: 1,
+            adaptiveHeight: true
+        });
+
+    </script>
 </body>
 
 </html>
