header & advantage section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,150 @@
 
 <body>
 
+    <!-- header start -->
+
+
+    <div id="top-header">
+        <div class="top-header">
+            <div class="container">
+                <div class="top-header-content">
+                    <div class="row">
+                        <div class="col-12 ">
+                            <div class="social-link">
+                                <div class="left-link">
+                                    <div class="link"><a href="https://www.facebook.com/"><i
+                                                class="fa fa-facebook"></i></a></div>
+                                    <div class="link"><a href="https://www.twitter.com/"><i
+                                                class="fa fa-twitter"></i></a></div>
+                                    <div class="link"><a href="https://www.google.com/"><i
+                                                class="fa fa-google-plus"></i></a></div>
+                                    <div class="link"><a href="https://www.linkedin.com/"><i
+                                                class="fa fa-linkedin"></i></a></div>
+                                    <div class="link"><a href="https://www.youtube.com/"><i
+                                                class="fa fa-youtube"></i></a></div>
+                                </div>
+                                <div class="right-link left-link">
+                                    <div class="link"><a href="tel:9685244823"><i class="fa fa-phone"></i>9685244823</a>
+                                    </div>
+                                    <div class="link"><a href="tel:9685244823"><i class="fa fa-phone"></i>8435738515</a>
+                                    </div>
+                                    <div class="link call-back"><a href="tel:9685244823">call me back</a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="header">
+        <div class="header">
+            <div class="container">
+                <div class="header-content">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="logo-menu">
+                                <div class="logo">
+                                    <a href="index.html">
+                                        <img src="image/3799715_10212.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="menu">
+                                    <ul class="menu-link">
+                                        <li><a href="#">why us</a></li>
+                                        <li><a href="#">about</a></li>
+                                        <li><a href="#">service</a></li>
+                                        <li><a href="#">portfolio</a></li>
+                                        <li><a href="#">process</a></li>
+                                        <li><a href="#">review</a></li>
+                                        <li><a href="#">our skills</a></li>
+                                        <li><a href="#">contact us</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- header end -->
+
+
+    <!-- advantage start -->
+
+    <div id="advantage">
+        <div class="advantage">
+            <div class="container">
+                <div class="advantage-content">
+                    <div class="row">
+                        <div class="col">
+                            <div class="advantage-head">
+                                <h2>
+                                    our <span>advantages</span>
+                                </h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe a omnis sint enim
+                                    corporis fuga voluptatem, pariatur cumque tempore aut corrupti sunt suscipit magni
+                                    cum ea expedita at officiis repellendus!</p>
+                            </div>
+                            <div class="abvantage-bottom">
+                                <div class="box">
+                                    <div class="icon">
+                                        <i class="fa fa-lightbulb-o" aria-hidden="true"></i>
+                                    </div>
+                                    <div class="text">
+                                        <h4>innovation</h4>
+                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="icon">
+                                        <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
+                                    </div>
+                                    <div class="text">
+                                        <h4>quality</h4>
+                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="icon">
+                                        <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                    </div>
+                                    <div class="text">
+                                        <h4>experience</h4>
+                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="icon">
+                                        <i class="fa fa-users" aria-hidden="true"></i>
+                                    </div>
+                                    <div class="text">
+                                        <h4>happy client's</h4>
+                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="icon">
+                                        <i class="fa fa-comments-o" aria-hidden="true"></i>                                    </div>
+                                    <div class="text">
+                                        <h4>support</h4>
+                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- advantage end -->
+
 
 
 
