--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                     </div>
                                     <div class="menu">
                                         <ul class="menu-link">
-                                            <li><a href="#">why us</a></li>
+                                            <li><a href="#">edweuifeuifuief</a></li>
                                             <li><a href="#">about</a></li>
                                             <li><a href="#">service</a></li>
                                             <li><a href="#">portfolio</a></li>
