--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    
+
 
     <!-- header start -->
 
@@ -95,12 +95,12 @@
         <div class="container">
             <div class="banner-content">
                 <div class="banner-1">
-                <div class="banner-text">
-                    <h1>WE ARE EXPERTS</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur laborum labore repellat
-                        itaque rerum quia tempora omnis officiis rem obcaecati.</p>
-                    <a href="#">READ MORE</a>
-                </div>
+                    <div class="banner-text">
+                        <h1>WE ARE EXPERTS</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur laborum labore repellat
+                            itaque rerum quia tempora omnis officiis rem obcaecati.</p>
+                        <a href="#">READ MORE</a>
+                    </div>
                 </div>
                 <div class="banner-1">
                     <div class="banner-text">
@@ -181,7 +181,8 @@
                                 </div>
                                 <div class="box">
                                     <div class="icon">
-                                        <i class="fa fa-comments-o" aria-hidden="true"></i>                                    </div>
+                                        <i class="fa fa-comments-o" aria-hidden="true"></i>
+                                    </div>
                                     <div class="text">
                                         <h4>support</h4>
                                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -212,7 +213,7 @@
             dots: true,
             infinite: true,
             speed: 300,
-            arrows:false,
+            arrows: false,
             slidesToShow: 1,
             adaptiveHeight: true
         });
