--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                         </a>
                                     </div>
                                     <div class="menu">
-                                        <ul class="menu-link">
+                                        <!-- <ul class="menu-link">
                                             <li><a href="#">jyjfyjfyjf</a></li>
                                             <li><a href="#">about</a></li>
                                             <li><a href="#">service</a></li>
@@ -74,7 +74,7 @@
                                             <li><a href="#">review</a></li>
                                             <li><a href="#">our skills</a></li>
                                             <li><a href="#">contact us</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </div>
                                 </div>
                             </div>
